Fixed asghar bug :D

--- a/mentionableedittext/build.gradle
+++ b/mentionableedittext/build.gradle
@@ -1,12 +1,40 @@
 apply plugin: 'com.android.library'
 
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'MentionEditText'
+
+    publishedGroupId = 'ir.coderz.coreadapter'
+    libraryName = 'CoreAdapter'
+    artifact = 'Core-Adapter'
+
+    libraryDescription = 'Core Adapter for recyclerview'
+
+    siteUrl = 'https://github.com/sajadshokri/Core-Adapter'
+    gitUrl = 'https://github.com/sajadshokri/Core-Adapter'
+
+    libraryVersion = '0.1.8'
+
+    developerId = 'sajadshokri'
+    developerName = 'Sajad Shokri'
+    developerEmail = 's.shokri@karinaco.com'
+
+    licenseName = 'The MIT License (MIT)'
+    licenseUrl = 'https://rem.mit-license.org/license.txt'
+    allLicenses = ["MIT"]
+
+}
+
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.0"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
+
+    defaultPublishConfig "release"
+    publishNonDefault true
 
     defaultConfig {
         minSdkVersion 11
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
@@ -21,9 +49,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
+    compile 'com.android.support:cardview-v7:25.1.0'
 
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
